--- a/client/macos/Runner/Configs/AppInfo.xcconfig
+++ b/client/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = imdb
+PRODUCT_NAME = login_totarial
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.imdb
+PRODUCT_BUNDLE_IDENTIFIER = com.example.loginTotarial
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
