--- a/client/windows/runner/Runner.rc
+++ b/client/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "imdb" "\0"
+            VALUE "FileDescription", "login_totarial" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "imdb" "\0"
+            VALUE "InternalName", "login_totarial" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "imdb.exe" "\0"
-            VALUE "ProductName", "imdb" "\0"
+            VALUE "OriginalFilename", "login_totarial.exe" "\0"
+            VALUE "ProductName", "login_totarial" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
