--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   get: ^4.6.6
   http: ^1.2.1
+  toastification: ^1.2.1
 
 dev_dependencies:
   flutter_test:
