--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
     - assets/imdb1.png
     - assets/appicon.png
     - assets/intro.png
+    - assets/unsplash0.png
     - assets/unsplash1.png
     - assets/unsplash2.png
     - assets/unsplash3.png
