--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -61,22 +61,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/imdb.png
-    - assets/shogun.jpg
-    - assets/imdb1.png
-    - assets/appicon.png
-    - assets/intro.png
-    - assets/unsplash0.png
-    - assets/unsplash1.png
-    - assets/unsplash2.png
-    - assets/unsplash3.png
-    - assets/unsplash4.png
-    - assets/unsplash5.png
-    - assets/unsplash6.png
-    - assets/unsplash7.png
-    - assets/unsplash8.png
-    - assets/unsplash9.png
-    - assets/unsplash10.png
+    - assets/images/
     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
