--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   get: ^4.6.6
   http: ^1.2.1
   toastification: ^1.2.1
+  carousel_slider: ^4.2.1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
